--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.12",
     "@react-three/rapier": "1.5.0",
+    "@splinetool/react-spline": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
