--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ogl": "^1.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-github-calendar": "^5.0.4",
     "react-intersection-observer": "^10.0.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.155.0"
